# scryer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  methodology_log.md  providers.json  wishlist.md
crates/scryer-fetch-cboe/: Cargo.toml
crates/scryer-fetch-cboe/src/: lib.rs
crates/scryer-fetch-cex-hyperliquid/: Cargo.toml
crates/scryer-fetch-cex-kraken/: Cargo.toml
crates/scryer-fetch-cex-kraken/src/: lib.rs  trades.rs
crates/scryer-fetch-cex-perps/: Cargo.toml
crates/scryer-fetch-cex-perps/src/: bingx.rs  bitget.rs  coinbase_intl.rs  crypto_com.rs  dydx_v4.rs  gate.rs  htx.rs  hyperliquid.rs  kraken_futures.rs  kucoin_futures.rs  lib.rs  mexc.rs  okx.rs  phemex.rs
crates/scryer-fetch-databento/: Cargo.toml
crates/scryer-fetch-databento/src/: lib.rs
crates/scryer-fetch-deribit/: Cargo.toml
crates/scryer-fetch-deribit/src/: lib.rs
crates/scryer-fetch-dexagg/: Cargo.toml
crates/scryer-fetch-dexagg/examples/: jup_smoke.rs
crates/scryer-fetch-dexagg/src/: gt_ohlcv.rs  jupiter.rs  lib.rs  raydium.rs
crates/scryer-fetch-equities/: Cargo.toml
crates/scryer-fetch-equities/src/: finnhub.rs  lib.rs  stooq.rs  yahoo_corp_actions.rs  yahoo_daily.rs  yahoo_earnings.rs  yahoo_intraday.rs
crates/scryer-fetch-equity-options/: Cargo.toml
crates/scryer-fetch-equity-options/src/: lib.rs  yahoo.rs
crates/scryer-fetch-evm/: Cargo.toml
crates/scryer-fetch-evm/src/: lib.rs
crates/scryer-fetch-fred/: Cargo.toml
crates/scryer-fetch-fred/src/: lib.rs  release.rs  series.rs
crates/scryer-fetch-jito/: Cargo.toml
crates/scryer-fetch-jito/src/: lib.rs  tip_floor.rs
crates/scryer-fetch-pyth/: Cargo.toml
crates/scryer-fetch-pyth-lazer/: Cargo.toml
crates/scryer-fetch-pyth-lazer/src/: lib.rs
crates/scryer-fetch-pyth-poster/: Cargo.toml
crates/scryer-fetch-pyth-poster/src/: accumulator_blob.rs  config.rs  daemon.rs  hermes.rs  instruction.rs  keys.rs  lib.rs  mode.rs  onchain.rs  pda.rs  priority_fee.rs  real_submitter.rs  staged_submitter.rs  tx.rs  wormhole_core.rs
crates/scryer-fetch-pyth/src/: lib.rs
crates/scryer-fetch-redstone/: Cargo.toml
crates/scryer-fetch-redstone/src/: lib.rs
crates/scryer-fetch-rss/: Cargo.toml
crates/scryer-fetch-rss/src/: backed_corp_actions.rs  lib.rs  nasdaq_halts.rs  wayback.rs
crates/scryer-fetch-sec/: Cargo.toml
crates/scryer-fetch-solana/: Cargo.toml
crates/scryer-fetch-solana/src/: chainlink.rs  clmm_pool_state.rs  dex_xstock_swaps.rs  dlmm_pool_state.rs  drift_liquidations.rs  error.rs  fluid_vault_configs.rs  get_transactions.rs  jito_bundle_tape.rs  jupiter_lend_liquidations.rs  kamino_liquidations.rs  kamino_obligations.rs  kamino_reserves.rs  kamino_scope_tape.rs  lib.rs  loopscale_loans.rs  mango_v4_liquidations.rs  mango_v4_oracle_configs.rs  marginfi_liquidations.rs  marginfi_reserves.rs  parse.rs  parse_transactions.rs  pool_discovery.rs  pool_snapshots.rs  priority_fees.rs  pyth_publisher.rs  sig_paginate.rs  soothsayer_band_tape.rs  swaps_helius_enhanced.rs  types.rs  validator_client.rs  xstock_holders.rs
crates/scryer-fetch-solana/tests/: dlmm_pool_state_fixture_test.rs  fetcher_test.rs
crates/scryer-fetch-xstocks/: Cargo.toml
crates/scryer-fetch-xstocks/src/: lib.rs
crates/scryer-manifest/: Cargo.toml
crates/scryer-manifest/src/: error.rs  lib.rs  sensor.rs
crates/scryer-portal/: Cargo.toml
crates/scryer-portal-shell/: Cargo.toml  tauri.conf.json
crates/scryer-portal-shell/src/: main.rs
crates/scryer-portal-shell/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/scryer-portal-shell/ui/src/: App.tsx
crates/scryer-portal-shell/ui/src/components/: JobDetailPanel.css  JobDetailPanel.tsx  JobTimeline.css  JobTimeline.tsx  ResultTable.css  ResultTable.tsx
crates/scryer-portal-shell/ui/src/lib/: api.ts
crates/scryer-portal-shell/ui/src/styles/: global.css  tokens.css
crates/scryer-portal-shell/ui/src/views/: DataView.css  DataView.tsx  JobsView.css  JobsView.tsx  SettingsView.tsx
crates/scryer-portal/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/scryer-portal/src/api/: data.rs  jobs.rs  misc.rs  mod.rs
crates/scryer-portal/src/jobs/: launchd.rs  mod.rs  systemd.rs
crates/scryer-proxy/: Cargo.toml
crates/scryer-proxy/src/: chain.rs  error.rs  forward.rs  health.rs  lib.rs  metrics.rs  quota.rs  registry.rs  router.rs
crates/scryer-proxy/tests/: proxy_test.rs
crates/scryer-runner/: Cargo.toml
crates/scryer-runner/src/: error.rs  lib.rs  runtime.rs  state.rs
crates/scryer-runner/tests/: end_to_end.rs
crates/scryer-schema/: Cargo.toml
crates/scryer-schema/src/: backed.rs  backed_nav_strikes.rs  bo_intraday_1m.rs  cboe_indices.rs  cex_perp_funding_multi.rs  cex_stock_perp_ohlcv.rs  cex_stock_perp_tape.rs  chainlink_data_streams.rs  clmm_pool_state.rs  cme_intraday_1m.rs  dead_letter.rs  deribit_iv.rs  dex_xstock_swaps.rs  dlmm_pool_state.rs  drift_liquidation.rs  earnings.rs  edgar_8k.rs  error.rs  evm_liquidation.rs  fluid_vault_config.rs  fred_macro.rs  fred_macro_extended.rs  freshness_check.rs  geckoterminal.rs  geckoterminal_ohlcv.rs  jito_bundle_tape.rs  jito_bundles.rs  jito_tip_floor.rs  jupiter_lend_liquidation.rs  kamino_liquidation.rs  kamino_obligation.rs  kamino_obligation_position.rs  kamino_reserve.rs  kamino_scope.rs  kraken_funding.rs  lib.rs  loopscale_loan.rs  loopscale_loan_collateral.rs  mango_v4_liquidation.rs  mango_v4_oracle_config.rs  (+27 more)
crates/scryer-sensors/: Cargo.toml
crates/scryer-sensors/src/: lib.rs
crates/scryer-store/: Cargo.toml
crates/scryer-store/src/: error.rs  import.rs  lib.rs  partition.rs  schema.rs
crates/scryer-store/tests/: import_test.rs  store_test.rs
docs/: m3_4_soak_protocol.md  phase_log.md  platform_plan.md  schemas.md
idl/marginfi/: marginfi-v2.json
ops/: soothsayer_consumer_migration_prompt.md
ops/launchd/: README.md  agent_verification_prompt.md  com.adamnoonan.scryer.backed-nav-strikes.plist  com.adamnoonan.scryer.cex-stock-perp-tape.plist  com.adamnoonan.scryer.chainlink-reports.plist  com.adamnoonan.scryer.kraken-trades.plist  (+23 more)
(+42 files in other folders)
