[workspace]
resolver = "2"
members = [
    "crates/scryer-proxy",
    "crates/scryer-fetch-solana",
    "crates/scryer-fetch-evm",
    "crates/scryer-fetch-cex-kraken",
    "crates/scryer-fetch-cex-hyperliquid",
    "crates/scryer-fetch-cex-perps",
    "crates/scryer-fetch-dexagg",
    "crates/scryer-fetch-redstone",
    "crates/scryer-fetch-pyth",
    "crates/scryer-fetch-jito",
    "crates/scryer-fetch-equities",
    "crates/scryer-fetch-rss",
    "crates/scryer-fetch-fred",
    "crates/scryer-fetch-databento",
    "crates/scryer-fetch-deribit",
    "crates/scryer-fetch-cboe",
    "crates/scryer-fetch-sec",
    "crates/scryer-schema",
    "crates/scryer-store",
    "crates/scryer-portal",
    "crates/scryer-portal-shell",
    "bin/scryer-proxy",
    "bin/scry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamnoonan/scryer"

[workspace.dependencies]
arrow-array = "55"
arrow-schema = "55"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
