[workspace]
resolver = "2"
members = [
    "crates/scryer-proxy",
    "crates/scryer-fetch-solana",
    "crates/scryer-fetch-evm",
    "crates/scryer-fetch-cex-kraken",
    "crates/scryer-fetch-cex-hyperliquid",
    "crates/scryer-fetch-cex-perps",
    "crates/scryer-fetch-dexagg",
    "crates/scryer-fetch-redstone",
    "crates/scryer-fetch-pyth",
    "crates/scryer-fetch-pyth-poster",
    "crates/scryer-fetch-jito",
    "crates/scryer-fetch-equities",
    "crates/scryer-fetch-rss",
    "crates/scryer-fetch-fred",
    "crates/scryer-fetch-databento",
    "crates/scryer-fetch-deribit",
    "crates/scryer-fetch-cboe",
    "crates/scryer-fetch-equity-options",
    "crates/scryer-fetch-sec",
    "crates/scryer-fetch-xstocks",
    "crates/scryer-manifest",
    "crates/scryer-runner",
    "crates/scryer-schema",
    "crates/scryer-sensors",
    "crates/scryer-store",
    "crates/scryer-portal",
    "crates/scryer-portal-shell",
    "bin/scryer-proxy",
    "bin/scryer-runner",
    "bin/scry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamnoonan/scryer"

[workspace.dependencies]
arrow-array = "55"
arrow-schema = "55"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
thiserror = "1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
# Correctness / clear-cut bugs — deny.
or_fun_call = "deny"
redundant_clone = "deny"
assigning_clones = "deny"
collection_is_never_read = "deny"
to_string_in_format_args = "deny"
mutex_atomic = "deny"
# Performance smells — start at warn so adoption isn't a wall of errors.
naive_bytecount = "warn"
stable_sort_primitive = "warn"
large_types_passed_by_value = "warn"
large_futures = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
