[package]
name = "scryer-fetch-cboe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cboe public-CSV index fetcher — VIX-family + SKEW historical daily bars from cdn.cboe.com. REST, no auth, no proxy."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
