[package]
name = "scryer-fetch-cex-perps"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-venue perp-futures funding-rate fetcher (OKX, Coinbase International, Hyperliquid, dYdX v4). REST clients with their own retry/rate-limit logic."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
