[package]
name = "scryer-fetch-databento"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Databento historical timeseries fetcher — CME futures (GLBX.MDP3) 1-minute OHLCV bars via the official `databento` Rust SDK. Pay-as-you-go; volume cost is negligible against the $125 signup credit."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
databento = "0.48"
time = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
dotenvy = "0.15"

[lints]
workspace = true
