[package]
name = "scryer-fetch-equities"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Equity market-data fetcher — Stooq (CSV daily bars, no auth) + Finnhub (JSON earnings calendar). Pivoted from Yahoo Finance after Yahoo's bot detection made the crumb-handshake path too brittle to operate."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
