[package]
name = "scryer-fetch-equity-options"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Equity options chain fetcher for the volatility.<venue>.single_stock_iv.v2 schema (wishlist item 52). v1: Yahoo Finance public options endpoint, forward-only ATM IV."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
