[package]
name = "scryer-fetch-fred"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FRED (Federal Reserve Economic Data) macro release calendar fetcher — REST client for api.stlouisfed.org/fred/release/dates. Free API key required."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
