[package]
name = "scryer-fetch-jito"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Jito public-service REST clients — per-signature bundle-attachment lookups against mainnet.block-engine.jito.wtf and chain-wide tip-floor publications from bundles.jito.wtf. Per-call retry; no proxy."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
