[package]
name = "scryer-fetch-pyth-poster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pyth equity Hermes-VAA poster daemon (write-side). Fetches signed Pyth price updates and posts them to Solana's Pyth receiver program. Mirror tape: pyth_poster_post.v1. Methodology: scryer methodology_log.md 'Write-side daemons' + 'Write-side daemon schemas'."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
scryer-store = { path = "../scryer-store" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
base64 = "0.22"
bs58 = "0.5"
sha2 = "0.10"
borsh = { version = "1", features = ["derive"] }
solana-sdk = "2"
solana-client = "2"
solana-transaction-status = "2"
pyth-min = "0.1"

[features]
test-mock = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
