[package]
name = "scryer-fetch-redstone"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RedStone Live oracle-tape fetcher — REST client for api.redstone.finance/prices. Per-venue retry; no proxy (HTTP-only, single endpoint)."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-schema = { path = "../scryer-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
