[package]
name = "scryer-portal-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri desktop shell for scryer-portal. Pure webview that connects to the launchd-managed scryer-portal-server at http://127.0.0.1:47777."

[[bin]]
name = "scryer-portal-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
ureq = "2"
rfd = "0.15"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true
