[package]
name = "scryer-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON-RPC proxy library — multi-provider failover, retry, quota detection, health probe. Chain-agnostic via ChainConfig trait. Pattern-lifted from relay-sol."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
prometheus = { version = "0.13", default-features = false }
arc-swap = "1"
async-trait = "0.1"
http = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
