[package]
name = "scryer-sensors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure evaluator for source-manifest workflow sensors. Methodology lock: Workflow runner (2026-05-01)."

[lib]
path = "src/lib.rs"

[dependencies]
scryer-manifest = { path = "../scryer-manifest" }

[lints]
workspace = true
