[package]
name = "scryer-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Partition layout, parquet writer, dedup enforcement. The only crate that writes to dataset/."

[lib]
path = "src/lib.rs"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { version = "55", default-features = false, features = ["arrow", "snap"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
scryer-schema = { path = "../scryer-schema" }

[dev-dependencies]
tempfile = "3"
