[package]
name = "scryer-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Partition layout, parquet writer, dedup enforcement. The only crate that writes to dataset/."

[lib]
path = "src/lib.rs"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { version = "55", default-features = false, features = ["arrow", "snap"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"
# Cross-platform `flock(2)` / `LockFileEx` for the per-partition write
# lock; see `Cross-process partition write lock` in methodology_log.md.
fs4 = { version = "0.13", default-features = false, features = ["sync"] }
scryer-schema = { path = "../scryer-schema" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
